Fix code smells
RISDEV-0000